# AirClip

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: python-tests.yml
desktop-agent/: install.cmd  install.ps1  pyproject.toml  requirements.txt  uninstall.cmd  uninstall.ps1
desktop-agent/airclip_agent/: __init__.py  __main__.py  app.py  ble_transport.py  clipboard.py  history.py  history_viewer.py  protocol.py  tray.py
desktop-agent/tests/: test_app.py  test_clipboard.py  test_protocol_history.py
docs/: architecture.md  protocol.md  windows-esp32-s3-runbook.md
docs/tools/: Watch-ClipboardLock.ps1
firmware/airclip_esp32/: airclip_esp32.ino
