[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airclip-agent"
version = "0.1.0"
description = "Windows desktop clipboard agent for the AirClip BLE bridge."
readme = { text = "Windows desktop clipboard agent for the AirClip BLE bridge. See the repository README for full firmware and deployment documentation.", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AirClip contributors" }
]
keywords = ["clipboard", "bluetooth", "ble", "esp32", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Utilities",
]
dependencies = [
    "bleak>=0.22.0",
    "Pillow>=10.0.0",
    "pyperclip>=1.8.2",
    "pystray>=0.19.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
airclip-agent = "airclip_agent.app:main"

[tool.setuptools]
packages = ["airclip_agent"]
include-package-data = true

[tool.setuptools.package-data]
airclip_agent = ["assets/*.ico", "assets/*.jpg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
